--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "vercel dev"
+  },
   "dependencies": {
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
