--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "serverless-http": "^3.2.0"
   }
 }
